docs: completed phase 1-4 for performance domain DDD refactoring and updated issues index